syntax = "proto3";

package ON.Fragments.Authorization.Payments.Stripe;

import "google/protobuf/timestamp.proto";

message SubscriptionRecord {
  bytes userId = 1;
  uint32 level = 2;
  string subscriptionId = 3;
  google.protobuf.Timestamp lastPaidUTC = 4;
  google.protobuf.Timestamp paidThruUTC = 5;
  google.protobuf.Timestamp renewsOnUTC = 6;
  google.protobuf.Timestamp canceledOnUTC = 7;
  google.protobuf.Timestamp changedOnUTC = 100;
}